--- a/index.html
+++ b/index.html
@@ -148,20 +148,40 @@
                 <div class="business_menu_wrap">
                     <ul class="business_menu">
                         <li>
-                            <p>영상제작</p>
-                            <a href="sub/business.html#video">자세히보기</a>
+                            <div class="title">
+                                <p>영상제작</p>
+                            </div>
+                            <div class="hover">
+                                <p>콘토피아는 디지털 기술의 발전과 시장의 다양한 요구에 빠르게 대응하며, 고객과 시청자들에게 가치 있는 경험을 제공하고자 합니다.</p>
+                                <a href="sub/business.html#video">자세히보기</a>
+                            </div>
                         </li>
                         <li>
-                            <p>오프라인행사</p>
-                            <a href="sub/business.html#event">자세히보기</a>
+                            <div class="title">
+                                <p>오프라인행사</p>
+                            </div>
+                            <div class="hover">
+                                <p>콘토피아는 디지털 기술의 발전과 시장의 다양한 요구에 빠르게 대응하며, 고객과 시청자들에게 가치 있는 경험을 제공하고자 합니다.</p>
+                                <a href="sub/business.html#event">자세히보기</a>
+                            </div>
                         </li>
                         <li>
-                            <p>실시간스트리밍</p>
-                            <a href="sub/business.html#streaming">자세히보기</a>
+                            <div class="title">
+                                <p>실시간스트리밍</p>
+                            </div>
+                            <div class="hover">
+                                <p>콘토피아는 디지털 기술의 발전과 시장의 다양한 요구에 빠르게 대응하며, 고객과 시청자들에게 가치 있는 경험을 제공하고자 합니다.</p>
+                                <a href="sub/business.html#streaming">자세히보기</a>
+                            </div>
                         </li>
                         <li>
-                            <p>홍보 및 마케팅</p>
-                            <a href="sub/business.html#marketing">자세히보기</a>
+                            <div class="title">
+                                <p>홍보 및 마케팅</p>
+                            </div>
+                            <div class="hover">
+                                <p>콘토피아는 디지털 기술의 발전과 시장의 다양한 요구에 빠르게 대응하며, 고객과 시청자들에게 가치 있는 경험을 제공하고자 합니다.</p>
+                                <a href="sub/business.html#marketing">자세히보기</a>
+                            </div>
                         </li>
                     </ul>
                     <ul class="business_bg">
