--- a/sub/promotion/detail/01_post.html
+++ b/sub/promotion/detail/01_post.html
@@ -34,7 +34,7 @@
                 <!-- pc_menu -->
                 <ul class="gnb">
                     <li>
-                        <a href=".././../sub/company.html">회사소개</a>
+                        <a href="../../company.html">회사소개</a>
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
