--- a/index.html
+++ b/index.html
@@ -57,16 +57,24 @@
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="sub/business.html#video">영상제작</a></li>
-                                    <li><a href="sub/business.html#event">오프라인 행사</a></li>
-                                    <li><a href="sub/business.html#streaming">실시간 스트리밍</a></li>
+                                    <li><a href="sub/business.html#video">영상 콘텐츠 제작</a></li>
+                                    <li><a href="sub/business.html#event">온·오프라인 행사</a></li>
                                     <li><a href="sub/business.html#marketing">홍보 및 마케팅</a></li>
                                 </ul>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <a href="sub/portfolio.html">포트폴리오</a>
+                        <a href="sub/video_pf.html">포트폴리오</a>
+                        <div class="submenu_wrap">
+                            <div class="submenu">
+                                <ul>
+                                    <li><a href="sub/video_pf.html">영상 콘텐츠 제작</a></li>
+                                    <li><a href="sub/event_pf.html">온·오프라인 행사</a></li>
+                                    <li><a href="sub/marketing_pf.html">홍보 및 마케팅</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         <a href="sub/promotion.html">홍보센터</a>
@@ -104,14 +112,19 @@
                                     <button></button>
                                     <a href="sub/business.html">사업분야</a>
                                     <ul class="m_submenu">
-                                        <li><a href="sub/business.html#video">영상제작</a></li>
-                                        <li><a href="sub/business.html#event">오프라인 행사</a></li>
-                                        <li><a href="sub/business.html#streaming">실시간 스트리밍</a></li>
+                                        <li><a href="sub/business.html#video">영상 콘텐츠 제작</a></li>
+                                        <li><a href="sub/business.html#event">온·오프라인 행사</a></li>
                                         <li><a href="sub/business.html#marketing">홍보 및 마케팅</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="sub/portfolio.html">포트폴리오</a>
+                                    <button></button>
+                                    <a href="sub/video_pf.html">포트폴리오</a>
+                                    <ul class="m_submenu">
+                                        <li><a href="sub/video_pf.html">영상 콘텐츠 제작</a></li>
+                                        <li><a href="sub/event_pf.html">온·오프라인 행사</a></li>
+                                        <li><a href="sub/marketing_pf.html">홍보 및 마케팅</a></li>
+                                    </ul>
                                 </li>
                                 <li>
                                     <a href="sub/promotion.html">홍보센터</a>
@@ -149,7 +162,7 @@
                     <ul class="business_menu">
                         <li>
                             <div class="title">
-                                <p>영상제작</p>
+                                <p>영상 콘텐츠 제작</p>
                             </div>
                             <div class="hover">
                                 <p>콘토피아는 디지털 기술의 발전과 시장의 다양한 요구에 빠르게 대응하며, 고객과 시청자들에게 가치 있는 경험을 제공하고자 합니다.</p>
@@ -158,20 +171,11 @@
                         </li>
                         <li>
                             <div class="title">
-                                <p>오프라인행사</p>
+                                <p>온·오프라인행사</p>
                             </div>
                             <div class="hover">
                                 <p>콘토피아는 디지털 기술의 발전과 시장의 다양한 요구에 빠르게 대응하며, 고객과 시청자들에게 가치 있는 경험을 제공하고자 합니다.</p>
                                 <a href="sub/business.html#event">자세히보기</a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="title">
-                                <p>실시간스트리밍</p>
-                            </div>
-                            <div class="hover">
-                                <p>콘토피아는 디지털 기술의 발전과 시장의 다양한 요구에 빠르게 대응하며, 고객과 시청자들에게 가치 있는 경험을 제공하고자 합니다.</p>
-                                <a href="sub/business.html#streaming">자세히보기</a>
                             </div>
                         </li>
                         <li>
@@ -189,10 +193,7 @@
                             <img src="images/main/business_introduce1.jpg" alt="">
                         </li>
                         <li>
-                            <img src="images/main/business_introduce2.png" alt="">
-                        </li>
-                        <li>
-                            <img src="images/main/business_introduce3.png" alt="">
+                            <img src="images/main/business_introduce2.jpg" alt="">
                         </li>
                         <li>
                             <img src="images/main/business_introduce4.jpg" alt="">
@@ -204,30 +205,23 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <img src="images/main/business_introduce1.jpg" alt="">
-                            <div class="text t1">
+                            <div class="text">
                                 <p>영상제작</p>
-                                <a href="sub/video.html">자세히보기</a>
+                                <a href="sub/business.html#video">자세히보기</a>
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <img src="images/main/business_introduce2.png" alt="">
+                            <img src="images/main/business_introduce2.jpg" alt="">
                             <div class="text">
                                 <p>오프라인행사</p>
-                                <a href="sub/event.html">자세히보기</a>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="images/main/business_introduce3.png" alt="">
-                            <div class="text t3">
-                                <p>실시간스트리밍</p>
-                                <a href="sub/streaming.html">자세히보기</a>
+                                <a href="sub/business.html#event">자세히보기</a>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <img src="images/main/business_introduce4.jpg" alt="">
                             <div class="text">
                                 <p>홍보 및 마케팅</p>
-                                <a href="sub/marketing.html">자세히보기</a>
+                                <a href="sub/business.html#marketing">자세히보기</a>
                             </div>
                         </div>
                         <!-- <div class="swiper-slide">Slide 5</div>
@@ -370,7 +364,7 @@
                     </li>
                 </ul>
                 <div class="portfolio_btn">
-                    <a href="sub/portfolio.html">포트폴리오 바로가기</a>
+                    <a href="sub/video_pf.html">포트폴리오 바로가기</a>
                 </div>
             </section>
         </main>
@@ -470,7 +464,7 @@
                     </ul>
                     <p>부산 해운대구 수영강변대로 140 810호 (우동, 부산문화콘텐츠컴플렉스)</p>
                     <p>Copyright @2023~ Contopia. All rights reserved.</p>
-                    <p><a href="#">개인정보처리방침</a></p>
+                    <p><a href="sub/privacy.html">개인정보처리방침</a></p>
                 </div>
                 <div class="sns_link">
                     <ul>
