--- a/sub/history.html
+++ b/sub/history.html
@@ -50,16 +50,24 @@
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="../sub/business.html#video">영상제작</a></li>
-                                    <li><a href="../sub/business.html#event">오프라인 행사</a></li>
-                                    <li><a href="../sub/business.html#streaming">실시간 스트리밍</a></li>
+                                    <li><a href="../sub/business.html#video">영상 콘텐츠 제작</a></li>
+                                    <li><a href="../sub/business.html#event">온·오프라인 행사</a></li>
                                     <li><a href="../sub/business.html#marketing">홍보 및 마케팅</a></li>
                                 </ul>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <a href="../sub/portfolio.html">포트폴리오</a>
+                        <a href="../sub/video_pf.html">포트폴리오</a>
+                        <div class="submenu_wrap">
+                            <div class="submenu">
+                                <ul>
+                                    <li><a href="../sub/video_pf.html">영상 콘텐츠 제작</a></li>
+                                    <li><a href="../sub/event_pf.html">온·오프라인 행사</a></li>
+                                    <li><a href="../sub/marketing_pf.html">홍보 및 마케팅</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         <a href="../sub/promotion.html">홍보센터</a>
@@ -97,14 +105,19 @@
                                     <button></button>
                                     <a href="../sub/business.html">사업분야</a>
                                     <ul class="m_submenu">
-                                        <li><a href="../sub/business.html#video">영상제작</a></li>
-                                        <li><a href="../sub/business.html#event">오프라인 행사</a></li>
-                                        <li><a href="../sub/business.html#streaming">실시간 스트리밍</a></li>
+                                        <li><a href="../sub/business.html#video">영상 콘텐츠 제작</a></li>
+                                        <li><a href="../sub/business.html#event">온·오프라인 행사</a></li>
                                         <li><a href="../sub/business.html#marketing">홍보 및 마케팅</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="../sub/portfolio.html">포트폴리오</a>
+                                    <button></button>
+                                    <a href="../sub/video_pf.html">포트폴리오</a>
+                                    <ul class="m_submenu">
+                                        <li><a href="../sub/video_pf.html">영상 콘텐츠 제작</a></li>
+                                        <li><a href="../sub/event_pf.html">온·오프라인 행사</a></li>
+                                        <li><a href="../sub/marketing_pf.html">홍보 및 마케팅</a></li>
+                                    </ul>
                                 </li>
                                 <li>
                                     <a href="../sub/promotion.html">홍보센터</a>
@@ -121,7 +134,7 @@
         <!-- header_E -->
 
         <div id="visual_banner">
-            <img src="../images/sub/history/history3.jpg" alt="회사연혁 대표이미지">
+            <img src="../images/sub/history/history.jpg" alt="회사연혁 대표이미지">
             <p>회사연혁</p>
         </div>
 
@@ -385,7 +398,7 @@
                 </ul>
                 <p>부산 해운대구 수영강변대로 140 810호 (우동, 부산문화콘텐츠컴플렉스)</p>
                 <p>Copyright @2023~ Contopia. All rights reserved.</p>
-                <p><a href="#">개인정보처리방침</a></p>
+                <p><a href="../sub/privacy.html">개인정보처리방침</a></p>
             </div>
             <div class="sns_link">
                 <ul>
