--- a/sub/company.html
+++ b/sub/company.html
@@ -50,16 +50,24 @@
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="../sub/business.html#video">영상제작</a></li>
-                                    <li><a href="../sub/business.html#event">오프라인 행사</a></li>
-                                    <li><a href="../sub/business.html#streaming">실시간 스트리밍</a></li>
+                                    <li><a href="../sub/business.html#video">영상 콘텐츠 제작</a></li>
+                                    <li><a href="../sub/business.html#event">온·오프라인 행사</a></li>
                                     <li><a href="../sub/business.html#marketing">홍보 및 마케팅</a></li>
                                 </ul>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <a href="../sub/portfolio.html">포트폴리오</a>
+                        <a href="../sub/video_pf.html">포트폴리오</a>
+                        <div class="submenu_wrap">
+                            <div class="submenu">
+                                <ul>
+                                    <li><a href="../sub/video_pf.html">영상 콘텐츠 제작</a></li>
+                                    <li><a href="../sub/event_pf.html">온·오프라인 행사</a></li>
+                                    <li><a href="../sub/marketing_pf.html">홍보 및 마케팅</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         <a href="../sub/promotion.html">홍보센터</a>
@@ -97,14 +105,19 @@
                                     <button></button>
                                     <a href="../sub/business.html">사업분야</a>
                                     <ul class="m_submenu">
-                                        <li><a href="../sub/business.html#video">영상제작</a></li>
-                                        <li><a href="../sub/business.html#event">오프라인 행사</a></li>
-                                        <li><a href="../sub/business.html#streaming">실시간 스트리밍</a></li>
+                                        <li><a href="../sub/business.html#video">영상 콘텐츠 제작</a></li>
+                                        <li><a href="../sub/business.html#event">온·오프라인 행사</a></li>
                                         <li><a href="../sub/business.html#marketing">홍보 및 마케팅</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="../sub/portfolio.html">포트폴리오</a>
+                                    <button></button>
+                                    <a href="../sub/video_pf.html">포트폴리오</a>
+                                    <ul class="m_submenu">
+                                        <li><a href="../sub/video_pf.html">영상 콘텐츠 제작</a></li>
+                                        <li><a href="../sub/event_pf.html">온·오프라인 행사</a></li>
+                                        <li><a href="../sub/marketing_pf.html">홍보 및 마케팅</a></li>
+                                    </ul>
                                 </li>
                                 <li>
                                     <a href="../sub/promotion.html">홍보센터</a>
@@ -188,6 +201,9 @@
                     <h2>
                         (주)파운더
                     </h2>
+                    <p>
+                        부산 해운대구 수영강변대로 140 810호 (우동, 부산문화콘텐츠컴플렉스) <br>051-714-3580/메일
+                    </p>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.3437267500585!2d129.12243907638288!3d35.17298455772491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c36d3607cf%3A0x83663b6a50b198f9!2zKOyjvCntjIzsmrTrjZQ!5e0!3m2!1sko!2skr!4v1702279369331!5m2!1sko!2skr"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -220,7 +236,7 @@
                     </ul>
                     <p>부산 해운대구 수영강변대로 140 810호 (우동, 부산문화콘텐츠컴플렉스)</p>
                     <p>Copyright @2023~ Contopia. All rights reserved.</p>
-                    <p><a href="#">개인정보처리방침</a></p>
+                    <p><a href="../sub/privacy.html">개인정보처리방침</a></p>
                 </div>
                 <div class="sns_link">
                     <ul>
