--- a/sub/event_pf.html
+++ b/sub/event_pf.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
         rel="stylesheet">
     <!-- css -->
-    <link rel="stylesheet" href="../css/business.css">
+    <link rel="stylesheet" href="../css/portfolio.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <!-- js -->
@@ -134,57 +134,46 @@
         <!-- header_E -->
 
         <div id="visual_banner">
-            <img src="../images/sub/business/business.jpg" alt="사업분야 대표이미지">
-            <p>사업분야</p>
+            <img src="../images/main/business_introduce2.jpg" alt="온·오프라인 행사 대표이미지">
+            <p>온·오프라인 행사</p>
         </div>
         <!-- visual_banner -->
 
-        <section id="business">
-            <h2>하나의 프로젝트를 완성하기 위해 <br> 디테일한 부분까지 <span>집중</span>하고 <span>몰입</span>하여 <br> <span>완벽함을 만들어 냅니다.</span></h2>
-            <div class="business_wrap">
-                <ul>
-                    <li id="video">
-                        <div>
-                            <img src="../images/main/business_introduce1.jpg" alt="영상제작">
-                        </div>
-                        <div class="text_box">
-                            <h2>영상 콘텐츠 제작</h2>
-                            <p>스토리보드, 영상편집, 후속 관리까지 전반적인 제작 과정을 수행합니다. 고객의 요구와 목적에 맞게 고품질의 비주얼 콘텐츠를 제공하여 브랜드 인지도 향상, 마케팅 전략 강화, 정보 전달 등 다양한 목적을 달성합니다. 콘토피아는 디지털 기술의 발전과 시장의 다양한 요구에 빠르게 대응하며, 고객과 시청자들에게 가치 있는 경험을 제공하고자 합니다.</p>
-                            <div class="portfolio_btn">
-                                <a href="video_pf.html">포트폴리오 바로가기</a>
+        <section class="portfolio">
+            <div class="container">
+                <ol class="item-tab">
+                    <li data-cate="all" class="on"><a>ALL</a></li>
+                    <li data-cate="banner"><a>현수막</a></li>
+                    <li data-cate="x-banner"><a>X-배너</a></li>
+                    <li data-cate="leaflet"><a>리플렛</a></li>
+                </ol>
+
+                <ul class="portfolio-list item-list">
+                    <li class="x-banner"><a href="#" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">BNK 핀테크랩</h4>
+                                <!-- <p class="portfolio__text">BNK 핀테크랩</p> -->
                             </div>
-                        </div>
-                    </li>
-                    <li id="event">
-                        <div class="text_box">
-                            <h2>온·오프라인 행사</h2>
-                            <p>고객의 목표와 요구사항을 바탕으로 행사의 전반적인 기획, 장소 선정, 참가자 관리, 프로모션, 운영 및 후속 관리까지 종합적으로 지원합니다.
-                                고객의 브랜드 인지도 향상, 커뮤니케이션 강화, 타켓 오디언스와의 연결을 위해 전문적이고 창의적인 행사를 제공합니다.</p>
-                                <div class="portfolio_btn">
-                                    <a href="event_pf.html">포트폴리오 바로가기</a>
-                                </div>
-                        </div>
-                        <div>
-                            <img src="../images/main/business_introduce2.jpg" alt="오프라인 행사">
-                        </div>
-                    </li>
-                    <li id="marketing">
-                        <div>
-                            <img src="../images/main/business_introduce4.jpg" alt="홍보 및 마케팅">
-                        </div>
-                        <div class="text_box">
-                            <h2>홍보 및 마케팅</h2>
-                            <p>기업이나 브랜드의 가치를 대중에게 전달하고 홍보하는 활동을 전문적으로 수행합니다. 타켓 오디언스를 분석하고, 전략전인 커뮤니케이션 계획을 세우며, 다양한 미디어 체널을 활용하여 광고, PR, 소셜 미디어 마케팅 등을 실행합니다. 콘토리아는 디지털 트랜드 변화에 빠르게 대응하며, 데이터 기반의 마케팅 전략을 강화해 나갈 것 입니다.</p>
-                            <div class="portfolio_btn">
-                                <a href="marketing_pf.html">포트폴리오 바로가기</a>
+                            <div class="img"><img src="../images/sub/portfolio/portfolio03.png"></div>
+                        </a></li>
+                    <li class="banner"><a href="#" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">탄소중립실천</h4>
+                                <p class="portfolio__text">새마을운동중앙회</p>
                             </div>
-                        </div>
-                    </li>
+                            <div class="img"><img src="../images/sub/portfolio/portfolio02.png"></div>
+                        </a></li>
+                    <li class="banner"><a href="#" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">탄소중립 화이트보드 애니메이션</h4>
+                                <p class="portfolio__text">새마을운동중앙회</p>
+                            </div>
+                            <div class="img"><img src="../images/sub/portfolio/portfolio01.png"></div>
+                        </a></li>
                 </ul>
             </div>
-
         </section>
-        <!-- business_E -->
+        <!-- portfolio_E -->
 
         <section id="contact_banner">
             <div class="contact_banner_text">
@@ -229,6 +218,39 @@
         <!-- footer_E -->
     </div>
     <script>
+        $(function () {
+            //tab
+            // $('.item-tab li').click(function(event) {
+            //     event.preventDefault();        
+            //     $('.item-tab li').removeClass('on');         
+            //     // $(this).closest('li').addClass('on');
+            //     $(this).addClass('on');
+            // });
+
+            // 위 코드를 순수 자바스크립트로 변경
+            var itemTab = document.querySelectorAll('.item-tab li');
+            for (var i = 0; i < itemTab.length; i++) {
+                itemTab[i].addEventListener('click', function (event) {
+                    event.preventDefault();
+                    for (var j = 0; j < itemTab.length; j++) {
+                        itemTab[j].classList.remove('on');
+                    }
+                    this.classList.add('on');
+                    // data-cate 속성을 이용하여 필터링
+                    var cate = this.getAttribute('data-cate');
+                    var item = document.querySelectorAll('.portfolio-list li');
+                    for (var k = 0; k < item.length; k++) {
+                        item[k].style.display = 'none';
+                        if (item[k].classList.contains(cate)) {
+                            item[k].style.display = 'block';
+                        } else if (cate == 'all') {
+                            item[k].style.display = 'block';
+                        }
+                    }
+                });
+            }
+        })
+
         // contact_banner_typing
         var ContactOptions = {
             stringsElement: '#contact_banner .title',
