--- a/sub/video_pf.html
+++ b/sub/video_pf.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
         rel="stylesheet">
     <!-- css -->
-    <link rel="stylesheet" href="../css/certification.css">
+    <link rel="stylesheet" href="../css/portfolio.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <!-- js -->
@@ -21,6 +21,7 @@
     <script src="../js/header.js"></script>
     <script src="../js/typed.min.js"></script>
 </head>
+
 <body>
     <div id="wrap">
         <header id="header" class="header">
@@ -133,141 +134,151 @@
         <!-- header_E -->
 
         <div id="visual_banner">
-            <img src="../images/sub/certification/certification.jpg" alt="특허/인증/수상 대표이미지">
-            <p>특허/인증/수상</p>
+            <img src="../images/main/business_introduce1.jpg" alt="영상 콘텐츠 제작 대표이미지">
+            <p>영상 콘텐츠 제작</p>
         </div>
+        <!-- visual_banner -->
 
-        <section class="awards">
+        <section class="portfolio">
             <div class="container">
                 <ol class="item-tab">
                     <li data-cate="all" class="on"><a>ALL</a></li>
-                    <!-- <li data-cate="patent"><a>특허</a></li> -->
-                    <li data-cate="patent_auth"><a>특허/인증</a></li>
-                    <li data-cate="award"><a>수상</a></li>
+                    <li data-cate="promotion"><a>홍보</a></li>
+                    <li data-cate="education"><a>교육</a></li>
+                    <li data-cate="sketch"><a>스케치</a></li>
                 </ol>
-        
-                <ul class="awards-list item-list">
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth20.jpg"></div><span
-                                class="cate">대한민국 특허청</span>
-                            <p>비즈니스 영상명함 제작 및 관리 서비스 제공 시스템</p>
+
+                <ul class="portfolio-list item-list">
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/18_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">부산형 워케이션</h4>
+                                <p class="portfolio__text">부산창조경제혁신센터</p>
+                            </div>
+                            <div class="img"><img src="../images/main/portfolio12.png"></div>
                         </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth19.jpg"></div><span
-                                class="cate">부산광역시</span>
-                            <p>부산대표 기술창업기업 인증서</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/17_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">저스트원더</h4>
+                                <p class="portfolio__text">스타일테크</p>
+                            </div>
+                            <div class="img"><img src="../images/main/portfolio11.png"></div>
                         </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth18.jpg"></div><span
-                                class="cate">한국소프트웨어산업협회</span>
-                            <p>소프트웨어사업자 일반 현황 관리확인서</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/16_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">SW융합작품전시회 <br> 코딩 워크스페이스 시설소개</h4>
+                                <p class="portfolio__text">동명대학교</p>
+                            </div>
+                            <div class="img"><img src="../images/main/portfolio10.png"></div>
                         </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth17.jpg"></div><span
-                                class="cate">중소벤처기업부</span>
-                            <p>중소기업 확인서</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/15_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">스타일테크 지원사업</h4>
+                                <p class="portfolio__text">부산정보산업진흥원</p>
+                            </div>
+                            <div class="img"><img src="../images/main/portfolio09.png"></div>
                         </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth16.jpg"></div><span class="cate">대한민국
-                                특허청</span>
-                            <p>비즈니스 영상명함 제작 서비스 제공 시스템</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/14_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">개발자양성교육</h4>
+                                <p class="portfolio__text">부산정보산업진흥원</p>
+                            </div>
+                            <div class="img"><img src="../images/main/portfolio08.png"></div>
                         </a></li>
-                        <li class="award"><a>
-                            <div class="img"><img src="../images/sub/certification/award4.jpg"></div>
-                            <span class="cate">중소벤처기업부</span>
-                            <p>중소기업 창업 활성화 유공 중소벤처기업부장관 표창​</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/13_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">고품격커피공장</h4>
+                                <p class="portfolio__text">바름팩토리</p>
+                            </div>
+                            <div class="img"><img src="../images/main/portfolio07.png"></div>
                         </a></li>
-                        <li class="award"><a>
-                            <div class="img"><img src="../images/sub/certification/award3.jpg"></div><span class="cate">해운대구</span>
-                            <p>일자리 창출 유공 해운대구청장 표창​</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/12_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">코드브로스 워크폼</h4>
+                                <p class="portfolio__text">코드브로스</p>
+                            </div>
+                            <div class="img"><img src="../images/main/portfolio06.png"></div>
                         </a></li>
-                        <li class="award"><a>
-                            <div class="img"><img src="../images/sub/certification/award2.jpg">
-                            </div><span class="cate">창업진흥원</span>
-                            <p>B-Investment Show IR피칭 대회 창업진흥원장상 대상​</p>
+                    <li class="education"><a href="../sub/portfolio/video_pf/11_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">인공지능 아두이노! <br> 부산의 축제를 알려줘</h4>
+                                <p class="portfolio__text">동명대학교</p>
+                            </div>
+                            <div class="img"><img src="../images/main/portfolio05.png"></div>
                         </a></li>
-                        <li class="award"><a>
-                            <div class="img"><img src="../images/sub/certification/award1.jpg"></div><span
-                                class="cate">부산지방중소벤처기업청</span>
-                            <p>중소기업 창업 활성화 유공 중소벤처기업부청장 표창</p>
+                    <li class="sketch"><a href="../sub/portfolio/video_pf/10_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">땅울림 활동 발표 대회 현장</h4>
+                                <p class="portfolio__text">기상청&한국능률협회</p>
+                            </div>
+                            <div class="img"><img src="../images/main/portfolio04.png"></div>
                         </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth15.jpg"></div>
-                            <span class="cate">중소기업유통센터</span>
-                            <p>직접생산확인증명서</p>
+                    <li class="sketch"><a href="../sub/portfolio/video_pf/09_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">나이팅게일 선서식</h4>
+                                <p class="portfolio__text">가야대학교</p>
+                            </div>
+                            <div class="img"><img src="../images/main/portfolio03.png"></div>
                         </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth14.jpg"></div><span
-                                class="cate">한국산업기술진흥협회</span>
-                            <p>기업부설연구소 인정서</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/08_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">스마트시티 학술용역 결과보고</h4>
+                                <p class="portfolio__text">부산시의회</p>
+                            </div>
+                            <div class="img"><img src="../images/main/portfolio02.png"></div>
                         </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth13.jpg">
-                            </div><span class="cate">부산광역시</span>
-                            <p>출판사 신고확인증</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/07_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">스마트시티 실증랩 소개</h4>
+                                <p class="portfolio__text">부산창조경제혁신센터</p>
+                            </div>
+                            <div class="img"><img src="../images/main/portfolio01.png"></div>
                         </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth12.jpg"></div><span
-                                class="cate">(사)한국에듀테크산업협회</span>
-                            <p>이러닝사업자 신고확인서</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/06_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">부산창업공유대학_미스터멘션</h4>
+                                <p class="portfolio__text">부산대학교</p>
+                            </div>
+                            <div class="img"><img src="../images/sub/portfolio/portfolio06.png"></div>
                         </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth11.jpg"></div><span
-                                class="cate">부산광역시</span>
-                            <p>통신판매업신고증</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/05_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">부산창업공유대학_말랑하니</h4>
+                                <p class="portfolio__text">부산대학교</p>
+                            </div>
+                            <div class="img"><img src="../images/sub/portfolio/portfolio05.png"></div>
                         </a></li>
-                        <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth1.jpg"></div><span
-                                class="cate">SCI평가정보</span>
-                            <p>기업신용등급 B+</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/04_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">ICT이노베이션스퀘어 조성사업</h4>
+                                <p class="portfolio__text">부산정보산업진흥원</p>
+                            </div>
+                            <div class="img"><img src="../images/sub/portfolio/portfolio04.png"></div>
                         </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth10.jpg"></div><span
-                                class="cate">부산광역시</span>
-                            <p>부산대표 공유기업 지정서</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/03_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">BNK 핀테크랩</h4>
+                                <!-- <p class="portfolio__text">BNK 핀테크랩</p> -->
+                            </div>
+                            <div class="img"><img src="../images/sub/portfolio/portfolio03.png"></div>
                         </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth9.jpg"></div><span
-                                class="cate">해운대구청</span>
-                            <p>비디오물제작업 신고증</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/02_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">탄소중립실천</h4>
+                                <p class="portfolio__text">새마을운동중앙회</p>
+                            </div>
+                            <div class="img"><img src="../images/sub/portfolio/portfolio02.png"></div>
                         </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth8.jpg"></div><span class="cate">조달청</span>
-                            <p>경쟁입찰참가자격등록증</p>
-                        </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth7.jpg"></div><span
-                                class="cate">한국디자인진흥원</span>
-                            <p>산업디자인전문회사 신고확인증</p>
-                        </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth6.jpg"></div><span
-                                class="cate">부산광역시</span>
-                            <p>부산대표 기술창업기업 인증서</p>
-                        </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth5.jpg"></div><span
-                                class="cate">벤처기업확인기관</span>
-                            <p>벤처기업확인서</p>
-                        </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth4.jpg"></div><span
-                                class="cate">한국산업기술진흥협회</span>
-                            <p>연구개발전담부서 인정서</p>
-                        </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth3.jpg"></div><span
-                                class="cate">중소벤처기업부</span>
-                            <p>창업기업 확인서</p>
-                        </a></li>
-                    <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth2.jpg"></div><span
-                                class="cate">한국교육콘텐츠품질인증위원회</span>
-                            <p>품질인증등급 AA</p>
+                    <li class="promotion"><a href="../sub/portfolio/video_pf/01_film.html" class="portfolio__link">
+                            <div class="portfolio__mask">
+                                <h4 class="portfolio__title">탄소중립 화이트보드 애니메이션</h4>
+                                <p class="portfolio__text">새마을운동중앙회</p>
+                            </div>
+                            <div class="img"><img src="../images/sub/portfolio/portfolio01.png"></div>
                         </a></li>
                 </ul>
             </div>
         </section>
+        <!-- portfolio_E -->
 
         <section id="contact_banner">
             <div class="contact_banner_text">
@@ -281,7 +292,7 @@
             </div>
         </section>
         <!-- contact_banner_E -->
-    
+
         <footer id="footer">
             <div class="footer">
                 <div class="footer_text">
@@ -332,7 +343,7 @@
                     this.classList.add('on');
                     // data-cate 속성을 이용하여 필터링
                     var cate = this.getAttribute('data-cate');
-                    var item = document.querySelectorAll('.awards-list li');
+                    var item = document.querySelectorAll('.portfolio-list li');
                     for (var k = 0; k < item.length; k++) {
                         item[k].style.display = 'none';
                         if (item[k].classList.contains(cate)) {
@@ -367,3 +378,5 @@
         });
     </script>
 </body>
+
+</html>
