--- a/sub/company.html
+++ b/sub/company.html
@@ -202,7 +202,7 @@
                         (주)파운더
                     </h2>
                     <p>
-                        부산 해운대구 수영강변대로 140 810호 (우동, 부산문화콘텐츠컴플렉스) <br>051-714-3580/메일
+                        부산 해운대구 수영강변대로 140 810호 (우동, 부산문화콘텐츠컴플렉스) <br>051-714-3580/contopia@thefounder.kr
                     </p>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.3437267500585!2d129.12243907638288!3d35.17298455772491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c36d3607cf%3A0x83663b6a50b198f9!2zKOyjvCntjIzsmrTrjZQ!5e0!3m2!1sko!2skr!4v1702279369331!5m2!1sko!2skr"
