--- a/sub/marketing_pf.html
+++ b/sub/marketing_pf.html
@@ -148,10 +148,10 @@
                 </ol>
 
                 <ul class="portfolio-list item-list">
-                    <li class="promotion"><a href="#" class="portfolio__link">
+                    <!-- <li class="promotion"><a href="#" class="portfolio__link">
                             <div class="portfolio__mask">
                                 <h4 class="portfolio__title">BNK 핀테크랩</h4>
-                                <!-- <p class="portfolio__text">BNK 핀테크랩</p> -->
+                                <p class="portfolio__text">BNK 핀테크랩</p>
                             </div>
                             <div class="img"><img src="../images/sub/portfolio/portfolio03.png"></div>
                         </a></li>
@@ -168,7 +168,7 @@
                                 <p class="portfolio__text">새마을운동중앙회</p>
                             </div>
                             <div class="img"><img src="../images/sub/portfolio/portfolio01.png"></div>
-                        </a></li>
+                        </a></li> -->
                 </ul>
             </div>
         </section>
