--- a/sub/history.html
+++ b/sub/history.html
@@ -182,24 +182,36 @@
                                     <h3 class="history-title">2023</h3>
                                 </li>
                                 <li>
+                                    <h2>12</h2>
+                                    <div>
+                                        <p>'Hilightopia(하이라이토피아)' 소프트웨어 공인인증서 발급 완료</p>
+                                        <p>'Hilightopia(하이라이토피아)' 저작권 등록</p>
+                                        <p>'콘토피아' 상표 등록</p>
+                                        <p>'비즈니스 영상명함 제작 및 관리 서비스 제공 시스템' 특허 등록</p>
+                                        <p>과학기술정보통신부장관상 수상(유망 SaaS 개발)</p>
+                                        <p>유망 SaaS 육성/개발 사업 우수기업 선정</p>
+                                        <p>(KACI)클라우드 서비스 확인서 발급 완료</p>
+                                    </div>
+                                </li>
+                                <li>
                                     <h2>06</h2>
                                     <div>
                                         <p>B2B 홍보·영업 업무 체계 WebRTC(웹기반 실시간 통신프로토콜) 화상회의 자동 회의록 생성 솔루션 저작권 등록</p>
-                                        <p>2023년 유망 SaaS 개발·육성 지원사업[스타트업 부분]</p>
+                                        <p>유망 SaaS 개발·육성 지원사업[스타트업 부분] 선정</p>
                                     </div>
                                 </li>
                                 <li>
                                     <h2>05</h2>
                                     <div>
-                                        <p>2023년 산학연 Collabo R&D(예비연구)선정​</p>
-                                        <p>중소기업 빅데이터 분석활용 지원사업​</p>
+                                        <p>산학연 Collabo R&D(예비연구)선정​</p>
+                                        <p>중소기업 빅데이터 분석활용 지원사업 선정​</p>
                                     </div>
                                 </li>
                                 <li>
                                     <h2>04</h2>
                                     <div>
                                         <p>‘웹클라우드 기반 프로젝트 관리 및 화상회의 통합서비스 제공 시스템’ 특허출원</p>
-                                        <p>부산대표 밀리언클럽 선정​</p>
+                                        <p>부산대표기술창업기업 [밀리언클럽] 선정​</p>
                                     </div>
                                 </li>
                                 <li>
@@ -217,7 +229,7 @@
                                 <li>
                                     <h2>12</h2>
                                     <div>
-                                        <p>2022 지식서비스 아이디어 사업화 지원사업 상위 2개사 선정에 따른 국비연계 R&D 컨설팅 사업 선정​</p>
+                                        <p>지식서비스 아이디어 사업화 지원사업 [우수기업] 선정​</p>
                                         <p>중소기업 창업 활성화 유공 중소벤처기업부장관 표창​</p>
                                     </div>
                                 </li>
@@ -225,35 +237,35 @@
                                     <h2>11</h2>
                                     <div>
                                         <p>일자리 창출 유공 해운대구청장 표창​</p>
-                                        <p>B-Investment Show IR피칭 대회 창업진흥원장상 대상​</p>
+                                        <p>B-Investment Show IR피칭 대회 창업진흥원장상 대상 수상​</p>
                                         <p>온라인 실시간 중계 콘텐츠 하이라이트 영상 자동 제작 솔루션 저작권 등록​</p>
-                                        <p>온라인 실시간 중계 콘텐츠 하이라이트 영상 자동 제작 솔루션 v0.0.1-beta 시험성적서 발급</p>
+                                        <p>온라인 실시간 중계 콘텐츠 하이라이트 영상 자동 제작 솔루션 v0.0.1-beta 시험성적서</p>
                                     </div>
                                 </li>
                                 <li>
                                     <h2>09</h2>
                                     <div>
                                         <p>‘하이라이트 영상 자동 편집 시스템’ 특허출원</p>
-                                        <p>이러닝콘텐츠 품질인증 AA등급 취득</p>
+                                        <p>이러닝콘텐츠 품질인증서 (AA등급)</p>
                                     </div>
                                 </li>
                                 <li>
                                     <h2>08</h2>
                                     <div>
-                                        <p>출판사 신고증 발급</p>
+                                        <p>출판사 신고확인증</p>
                                     </div>
                                 </li>
                                 <li>
                                     <h2>07</h2>
                                     <div>
-                                        <p>기업신용평가 취득(B+등급)</p>
-                                        <p>이러닝 사업자 신고</p>
+                                        <p>기업신용등급 인증서(B+등급)</p>
+                                        <p>이러닝사업자 신고확인서</p>
                                     </div>
                                 </li>
                                 <li>
                                     <h2>06</h2>
                                     <div>
-                                        <p>중소기업 IP 바로지원 사업 선정</p>
+                                        <p>중소기업 IP 바로 지원사업 선정</p>
                                         <p>1인창조마케팅 지원사업 선정</p>
                                     </div>
                                 </li>
@@ -262,7 +274,7 @@
                                     <div>
                                         <p>콘토피아 상표권 출원</p>
                                         <p>공유기업(재)지정 및 촉진사업비 지원사업 선정</p>
-                                        <p>통신판매업 신고증 발급</p>
+                                        <p>통신판매업 신고증</p>
                                     </div>
                                 </li>
                                 <li>
@@ -277,13 +289,13 @@
                                     <h2>03</h2>
                                     <div>
                                         <p>지식서비스 아이디어 사업화 지원사업 선정</p>
-                                        <p>직접생산확인증명서 인증</p>
+                                        <p>직접생산확인 증명서</p>
                                     </div>
                                 </li>
                                 <li>
                                     <h2>02</h2>
                                     <div>
-                                        <p>비디오물제작업 인증</p>
+                                        <p>비디오물제작업 신고증</p>
                                     </div>
                                 </li>
                             </ul>
@@ -295,10 +307,12 @@
                                 <li>
                                     <h2>11</h2>
                                     <div>
-                                        <p>산업디자인전문회사 신고 확인증</p>
-                                        <p>파운더 상표권, 디자인 출원(디자인권 등록 완료)</p>
+                                        <p>부산지방중소벤처기업청장 표창 수상</p>
+                                        <p>파운더 디자인권 출원</p>
+                                        <p>파운더 상표권 등록</p>
                                         <p>'비즈니스 영상 명함 세일즈 연계 시스템' 특허출원</p>
                                         <p>'비즈니스 영상 명함시스템' 특허출원</p>
+                                        <p>산업디자인전문회사 신고확인증</p>
                                     </div>
                                 </li>
                                 <li>
@@ -312,7 +326,7 @@
                                 <li>
                                     <h2>07</h2>
                                     <div>
-                                        <p>기업신용평가 취득(B0등급)</p>
+                                        <p>기업신용등급 인증서(B0등급)</p>
                                     </div>
                                 </li>
                                 <li>
@@ -324,16 +338,16 @@
                                 <li>
                                     <h2>05</h2>
                                     <div>
-                                        <p>기업부설 연구소 설립 및 인정</p>
-                                        <p>부산대표창업기업 브라이트 클럽 선정</p>
+                                        <p>부산대표기술창업기업 [브라이트 클럽] 선정</p>
+                                        <p>기업부설 연구소 설립</p>
                                     </div>
                                 </li>
                                 <li>
                                     <h2>04</h2>
                                     <div>
-                                        <p>벤처기업(혁신성장유형)인증</p>
-                                        <p>연구전담부서 설립 및 인증</p>
                                         <p>기술창업 인큐베이팅 지원사업 13기 선정</p>
+                                        <p>벤처기업(혁신성장유형)인증</p>
+                                        <p>연구전담부서 설립</p>
                                     </div>
                                 </li>
                                 <li>
@@ -345,8 +359,8 @@
                                 <li>
                                     <h2>02</h2>
                                     <div>
-                                        <p>빅테이터 AI 기반 산업 혁신인재 고용사업 선정</p>
                                         <p>디지털 영상 명함 제작 서비스 특허출원</p>
+                                        <p>빅테이터 AI 기반 산업 혁신인재 고용사업 선정</p>
                                     </div>
                                 </li>
                             </ul>
