--- a/sub/certification.html
+++ b/sub/certification.html
@@ -147,6 +147,11 @@
                 </ol>
         
                 <ul class="awards-list item-list">
+                    <li class="award"><a>
+                            <div class="img"><img src="../images/sub/certification/award5.jpg"></div><span
+                                class="cate">과학기술정보통신부</span>
+                            <p>2023 유망 SaaS 개발·육성 사업 장관상</p>
+                        </a></li>
                     <li class="patent_auth"><a>
                             <div class="img"><img src="../images/sub/certification/patent_auth20.jpg"></div><span
                                 class="cate">대한민국 특허청</span>
