--- a/sub/certification.html
+++ b/sub/certification.html
@@ -160,7 +160,7 @@
                     <li class="patent_auth"><a>
                             <div class="img"><img src="../images/sub/certification/patent_auth19.jpg"></div><span
                                 class="cate">부산광역시</span>
-                            <p>부산대표 기술창업기업 인증서</p>
+                            <p>부산대표 기술창업기업 인증서[밀리언클럽]</p>
                         </a></li>
                     <li class="patent_auth"><a>
                             <div class="img"><img src="../images/sub/certification/patent_auth18.jpg"></div><span
@@ -237,7 +237,8 @@
                             <p>비디오물제작업 신고증</p>
                         </a></li>
                     <li class="patent_auth"><a>
-                            <div class="img"><img src="../images/sub/certification/patent_auth8.jpg"></div><span class="cate">조달청</span>
+                            <div class="img"><img src="../images/sub/certification/patent_auth8.jpg"></div><span 
+                            class="cate">조달청</span>
                             <p>경쟁입찰참가자격등록증</p>
                         </a></li>
                     <li class="patent_auth"><a>
@@ -248,7 +249,7 @@
                     <li class="patent_auth"><a>
                             <div class="img"><img src="../images/sub/certification/patent_auth6.jpg"></div><span
                                 class="cate">부산광역시</span>
-                            <p>부산대표 기술창업기업 인증서</p>
+                            <p>부산대표 기술창업기업 인증서[브라이트클럽]</p>
                         </a></li>
                     <li class="patent_auth"><a>
                             <div class="img"><img src="../images/sub/certification/patent_auth5.jpg"></div><span
