--- a/sub/company.html
+++ b/sub/company.html
@@ -164,7 +164,8 @@
                     <p>
                         우리는 ‘시도하지 않으면 아무런 변화가 없다’는 경영철학을 가지고 모든 임직원이 함께 고민하며 새로운 변화를 만들어 갑니다.
                     </p>
-                    <table>
+                    <div class="center"><img src="../images/sub/company/organization_chart.svg" alt=""></div>
+                    <!-- <table>
                         <tr>
                             <td>경영기획팀</td>
                         </tr>
@@ -174,7 +175,7 @@
                         <tr>
                             <td>Creative팀</td>
                         </tr>
-                    </table>
+                    </table> -->
                 </div>
             </div>
             <div class="company-title s3">
