--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
                 <img src="images/main/visual_banner.jpg" alt="">
             </div>
             <div class="visual_text">
-                <p><span>창의적인 아이디어와 전문적인 실행력으로<br></span>여러분의 이야기를 생생한 콘텐츠로 만들어 드립니다.</p>
+                <!-- <p><span>창의적인 아이디어와 전문적인 실행력으로<br></span>여러분의 이야기를 생생한 콘텐츠로 만들어 드립니다.</p> -->
+                <p>세상 어디에도 없던 콘텐츠! <br>콘텐츠 제작의 신세계, 콘토피아 <br> <span>영상 제작 부터 온오프라인 행사, 홍보 및 마케팅까지 콘토피아라서 가능합니다.</span></p>
             </div>
             <div class="scroll_down">
                 <span class="motion"></span>
@@ -155,10 +156,10 @@
         <!-- visual_banner_E -->
 
         <main id="container">
-            <section id="business_introduce"  data-aos="fade-up" data-aos-duration="1500" data-aos-once="true">
-                <h2>기대 이상의 결과물로 혁신을 제공하는 <br> 콘토피아의 사업을
+            <section id="business_introduce">
+                <h2 data-aos="fade-up" data-aos-duration="1000">기대 이상의 결과물로 혁신을 제공하는 <br> 콘토피아의 사업을
                     소개합니다.</h2>
-                <div class="business_menu_wrap">
+                <div class="business_menu_wrap" data-aos="fade-up" data-aos-duration="1000">
                     <ul class="business_menu">
                         <li>
                             <div class="title">
@@ -201,7 +202,7 @@
                     </ul>
                 </div>
                 <!-- Swiper -->
-                <div class="swiper mySwiper">
+                <div class="swiper mySwiper" data-aos="fade-up" data-aos-duration="1000">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <img src="images/main/business_introduce1.jpg" alt="">
@@ -239,10 +240,10 @@
             </section>
             <!-- business_introduce_E -->
 
-            <section id="portfolio"  data-aos="fade-up" data-aos-duration="1500" data-aos-once="true">
-                <h2>최고의 품질과 전문성을 보장합니다.</h2>
-                <ul class="img_wrap" oncontextmenu="return false">
-                    <li>
+            <section id="portfolio">
+                <h2 data-aos="fade-up" data-aos-duration="1000">최고의 품질과 전문성을 보장합니다.</h2>
+                <ul class="img_wrap" oncontextmenu="return false" data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000">
                         <a href="sub/portfolio/detail/18_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -252,7 +253,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-duration="1000">
                         <a href="sub/portfolio/detail/17_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -262,7 +263,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-duration="1000">
                         <a href="sub/portfolio/detail/16_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -272,7 +273,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-duration="1000">
                         <a href="sub/portfolio/detail/15_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -282,7 +283,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-duration="1000">
                         <a href="sub/portfolio/detail/14_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -292,7 +293,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-duration="1000">
                         <a href="sub/portfolio/detail/13_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -302,7 +303,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-duration="1000">
                         <a href="sub/portfolio/detail/12_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -312,7 +313,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-duration="1000">
                         <a href="sub/portfolio/detail/11_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -322,7 +323,7 @@
                             <p>교육</p>
                         </a>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-duration="1000">
                         <a href="sub/portfolio/detail/10_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -332,7 +333,7 @@
                             <p>스케치</p>
                         </a>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-duration="1000">
                         <a href="sub/portfolio/detail/09_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -342,7 +343,7 @@
                             <p>스케치</p>
                         </a>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-duration="1000">
                         <a href="sub/portfolio/detail/08_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -352,7 +353,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li>
+                    <li data-aos="fade-up" data-aos-duration="1000">
                         <a href="sub/portfolio/detail/07_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -363,13 +364,13 @@
                         </a>
                     </li>
                 </ul>
-                <div class="portfolio_btn">
+                <div class="portfolio_btn" data-aos="fade-right" data-aos-duration="1000">
                     <a href="sub/video_pf.html">포트폴리오 바로가기</a>
                 </div>
             </section>
         </main>
-        <section id="marquee"  data-aos="fade-up" data-aos-duration="1500" data-aos-once="true">
-            <h2>다양한 가치를 가진 기업의 여정에 함께 하겠습니다.</h2>
+        <section id="marquee">
+            <h2 data-aos="fade-up" data-aos-duration="1000">다양한 가치를 가진 기업의 여정에 함께 하겠습니다.</h2>
             <div class="marquee_wrap">
                 <div class="marquee-top">
                     <ul class="track">
@@ -421,8 +422,8 @@
         </section>
         <!-- marquee_E -->
 
-        <section id="notice"  data-aos="fade-up" data-aos-duration="1500" data-aos-once="true">
-            <h2>새로운 소식을 빠르게 만날 수 있습니다.</h2>
+        <section id="notice">
+            <h2 data-aos="fade-up" data-aos-duration="1000">새로운 소식을 빠르게 만날 수 있습니다.</h2>
             <ul class="notice_list">
                 <li>
                     <a href="sub/promotion/detail/02_post.html">
