--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         </main>
         <section id="marquee">
             <h2 data-aos="fade-up" data-aos-duration="1000">다양한 가치를 가진 기업의 여정에 함께 하겠습니다.</h2>
-            <div class="marquee_wrap">
+            <div class="marquee_wrap"  data-aos="fade-up" data-aos-duration="1000">
                 <div class="marquee-top">
                     <ul class="track">
                         <li><img src="images/main/Frame-4420.png" alt=""></li>
@@ -424,7 +424,7 @@
 
         <section id="notice">
             <h2 data-aos="fade-up" data-aos-duration="1000">새로운 소식을 빠르게 만날 수 있습니다.</h2>
-            <ul class="notice_list">
+            <ul class="notice_list" data-aos="fade-up" data-aos-duration="1000">
                 <li>
                     <a href="sub/promotion/detail/02_post.html">
                         <strong class="category">공지사항</strong>
